REGRESSION (r196620): Web Inspector: Selecting last message in the console makes the scrollbar visible https://bugs.webkit.org/show_bug.cgi?id=154326 <rdar://problem/24692717>
Reviewed by Timothy Hatcher.

* UserInterface/Views/LogContentView.css:
(.console-item.selected::after):
Make sure the selected message marker (blue vertical line) doesn't
go over the content view.


Canonical link: https://commits.webkit.org/172444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196689 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/LogContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/LogContentView.css
@@ -107,7 +107,7 @@
     content: "";
     left: 0;
     top: -1px;
-    bottom: -1px;
+    bottom: 0;
     background: hsl(0, 0%, 60%);
     width: 2px;
     z-index: 10;
